# spool-pilot

./: .gitignore  README.md  log_manager.py  main.py  pyproject.toml  queue_manager.py
print_files/: Denali_poka_yoke.3mf  Female_latch.3mf  canopy_tyro.gcode.3mf  denalicap.3mf  denalicap.gcode.3mf  thinkpad stand.3mf
static/: script.js  stock.xlsx  stock_script.js  style.css
stitch-generated-mockups/stitch_queue_view_dashboard/dashboard_overview/: code.html
stitch-generated-mockups/stitch_queue_view_dashboard/file_manager_dashboard/: code.html
stitch-generated-mockups/stitch_queue_view_dashboard/orders_view_dashboard/: code.html
stitch-generated-mockups/stitch_queue_view_dashboard/printers_view_dashboard/: code.html
stitch-generated-mockups/stitch_queue_view_dashboard/queue_view_dashboard/: code.html
stitch-generated-mockups/stitch_queue_view_dashboard/stock_view_dashboard/: code.html
stitch-generated-mockups/stitch_queue_view_dashboard/user_profile_and_settings/: code.html
templates/: dashboard.html  dashboardBACKUP.html  html_elements.html  main.html
templates/tabs/: dashboard_tab-backup.html  dashboard_tab.html  overview_tab.html  stock_tab.html
